--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "Brian Stanton",
     "license": "ISC",
     "devDependencies": {
+        "@types/uuid": "^9.0.8",
         "npm-run-all": "^4.1.5",
         "ts-loader": "^9.5.1",
         "typescript": "^5.4.5",
@@ -19,6 +20,7 @@
         "webpack-cli": "^5.1.4"
     },
     "dependencies": {
-        "live-server": "^1.2.2"
+        "live-server": "^1.2.2",
+        "uuid": "^9.0.1"
     }
 }
